test(idcard): 修正测试格式为冒号分隔，parser正则全部通过，E2E跳过native依赖