@@ -1,278 +1,290 @@
 # Utils Support Parent Starter
 
-[![Java Version](https://img.shields.io/badge/Java-21%2B-blue)](https://openjdk.java.net/)
+[![Java Version](https://img.shields.io/badge/Java-25%2B-blue)](https://openjdk.java.net/)
 [![License](https://img.shields.io/badge/License-Apache%202.0-green)](LICENSE)
 
-一个功能强大、高度可扩展的 Java 工具包集合，基于 SPI 机制实现插件化架构，提供丰富的开箱即用功能。
+一个功能强大、高度可扩展的 Java 工具包集合，通过 SPI 机制实现插件化架构，提供丰富的可复用工具能力。
 
 ## 目录
 
 - [项目简介](#项目简介)
-- [模块概览](#模块概览)
+- [模块总览](#模块总览)
+- [核心模块说明](#核心模块说明)
+- [已添加依赖及位置](#已添加依赖及位置)
 - [快速开始](#快速开始)
-- [高级功能示例](#高级功能示例)
-- [安装](#安装)
+- [高级使用示例](#高级使用示例)
+- [构建说明](#构建说明)
 - [文档索引](#文档索引)
+- [GraalVM 支持](#graalvm-支持)
 - [贡献](#贡献)
 
 ---
 
 ## 项目简介
 
-企业级 Java 工具包集合，模块化设计，通过 SPI 实现扩展。所有功能组件均可替换和扩展。
+企业级 Java 工具包集合，模块独立封装，通过 SPI 实现可扩展能力，提供统一接口替换复杂依赖。
 
 ### 核心特性
 
-- **插件化架构**：SPI 机制，热插拔扩展
-- **模块化设计**：按需引入，降低依赖冲突
-- **统一接口**：ProtocolServer、FileStorage、ChatClient、IdentificationEngine 等
-- **高性能**：基于 Netty、Vert.x、Disruptor
-- **动态插件**：运行时加载/卸载插件，Spring 集成
+- **插件化架构**：SPI 机制驱动，按需加载扩展
+- **模块零耦合**：各 starter 相互独立，可按需选用
+- **统一接口**：ProtocolServer / FileStorage / ChatClient / IdentificationEngine 等
+- **响应式支持**：集成 Netty、Vert.x、Disruptor
+- **动态配置**：支持热更新/灰度发布、Spring 集成
 
 ---
 
-## 模块概览
+## 模块总览
 
 ```
 utils-support-parent-starter/
+├── core-parent/                              # 核心基础模块（必选）
+│   ├── common-starter                        # 类型转换、JSON、加密、HTTP 客户端
+│   ├── spring-starter                        # Spring 框架支持
+│   ├── springboot-starter                    # Spring Boot 自动装配
+│   ├── datasource-starter                    # 数据源引擎（JdbcEngine/ReactorEngine）
+│   ├── filesystem-starter                    # 文件格式处理（ZIP/TAR/CSV/JSON/XML）
+│   ├── network-starter                       # 网络工具（下载器、代理）
+│   ├── spider-starter                        # 爬虫引擎
+│   ├── auth-starter                          # 认证授权
+│   ├── flow-starter                          # 流程引擎
+│   ├── payment-starter                       # 支付接入
+│   ├── maven-starter                         # Maven 工具
+│   └── osgi-starter                          # OSGi 支持
 │
-├── core-parent/                              # ★ 核心基础（必选）
-│   ├── common-starter                        # 类型转换、JSON、日期、加密、HTTP 客户端
-│   ├── spring-starter                        # Spring 集成
-│   ├── extension-starter                     # 扩展功能
-│   ├── spider-starter                        # 爬虫框架
-│
-├── cloud-parent/                             # 云服务集成
-│   ├── alibaba-starter / tencent-starter     # 阿里云 OSS/短信/大模型
-│   ├── huawei-starter / baidu-starter        # 华为 OBS、百度云
-│   ├── amazon-starter / google-starter       # AWS S3、Google Cloud
-│   ├── openai-starter / claude-parent        # AI 大模型 API（OpenAI 兼容服务统一使用 openai-starter）
-│   ├── zhipu-starter / doubao-starter        # 智谱 GLM、豆包
-│   ├── ollama-starter / xunfei-starter       # 本地推理、讯飞星火
-│   ├── dingding-starter / feishu-starter     # 钉钉、飞书机器人
-│   ├── hikvision-starter / uniview-starter   # 海康/宇视安防
-│   └── qiniu-starter / unionpay-starter      # 七牛云、银联支付
-│
-├── datasource-parent/                        # 数据源（30+ 种）
+├── datasource-parent/                        # 数据库/数据源（30+ 种）
 │   ├── mysql-starter / postgresql-starter    # 关系型：MySQL、PG、Oracle、SQL Server
-│   ├── redis-starter / mongodb-starter       # NoSQL：Redis、MongoDB、ES
-│   ├── milvus-starter / jvector-starter      # 向量：Milvus、JVector
-│   ├── clickhouse-starter / duckdb-starter   # 列存：ClickHouse、DuckDB
-│   ├── hbase-starter / neo4j-starter         # 宽列：HBase、Neo4j 图
-│   ├── hibernate-starter / mybatis-plus      # ORM：Hibernate、MyBatis-Plus
-│   ├── calcite-starter / shardingv5          # SQL：Calcite 解析、ShardingSphere
-│   └── debezium-starter / r2dbc-starter      # CDC、响应式 JDBC
+│   ├── redis-starter / mongodb-starter       # NoSQL：Redis、MongoDB
+│   ├── milvus-starter / jvector-starter      # 向量库：Milvus、JVector
+│   ├── clickhouse-starter / duckdb-starter   # 分析型：ClickHouse、DuckDB
+│   ├── hbase-starter / neo4j-starter         # 宽表/图：HBase、Neo4j
+│   ├── hibernate-starter                     # ORM：Hibernate
+│   ├── calcite-starter / shardingv5-starter  # SQL引擎：Calcite、ShardingSphere
+│   ├── debezium-starter                      # CDC：Debezium
+│   ├── elasticsearch-starter                 # 搜索引擎：Elasticsearch
+│   ├── lucene-starter                        # 全文检索：Lucene
+│   ├── parquet-starter / oracle-starter      # 列式存储 / Oracle
+│   ├── influxdb-starter / greptimedb-starter # 时序数据库
+│   ├── sqlite-starter                        # 嵌入式 SQLite（含 Reactor 引擎）
+│   ├── h2-starter                            # H2 内存数据库
+│   ├── clickhouse-starter / mysql-starter    # 专用引擎
+│   ├── duckdb-starter / postgresql-starter
+│   ├── sqlserver-starter / oracle-starter
+│   └── tablesaw-starter / solr-starter       # 表格计算 / Solr
 │
-├── protocol-parent/                          # 多协议通信（50+ 协议）
-│   ├── netty-starter / vertx-starter         # 高性能 TCP/UDP
-│   ├── armeria-starter / rsocket-starter     # HTTP/2、响应式流
-│   ├── rpc-dubbo-starter / rpc-sofa-starter  # RPC 框架
-│   ├── ssh-starter / ftp-starter             # 远程访问
-│   ├── docker-starter / git-starter          # 容器与工具
-│   ├── socketd-starter / socketio-starter    # Socket 框架
-│   ├── datalake-starter                      # 数据湖
-│   └── httpclient-starter / retrofit-starter # HTTP 客户端
-│
-├── filesystem-parent/                        # 文件系统
+├── filesystem-parent/                        # 文件系统 & 文件格式
 │   ├── excel-starter / pdf-starter           # 文档：Excel、PDF、Word、OFD
-│   ├── image-starter / ffmpeg-starter        # 媒体：图片、SVG、FFmpeg 音视频
+│   ├── image-starter / image-apng-starter    # 图片：处理、APNG 动画
+│   ├── ffmpeg-starter / ffmpeg-javacv-starter # 音视频：FFmpeg、JavaCV
+│   ├── ffmpeg-rust-starter                   # FFmpeg Rust 绑定
 │   ├── email-starter                         # 邮件：SMTP/IMAP
-│   ├── aspose-starter / libreoffice-starter  # 转换：Aspose、LibreOffice、OnlyOffice
-│   ├── markdown-starter / groovy-starter     # 标记与脚本
-│   └── zxing-starter / geoip2-starter        # 二维码、IP 地理定位
+│   ├── aspose-starter / libreoffice-starter  # 格式转换：Aspose、LibreOffice、OnlyOffice
+│   ├── json-starter                          # JSON 处理
+│   ├── groovy-starter                        # Groovy 脚本
+│   ├── pandoc-starter                        # Markdown 转换
+│   ├── filestorage-starter                   # 文件存储（含压缩格式预览）
+│   ├── filesearch-starter                    # 文件搜索（Rust 后端）
+│   ├── zxing-starter / geoip2-starter        # 二维码、IP 定位
+│   ├── ip2region-starter / qqwry-starter     # IP 地址库
+│   ├── syslog-starter / html-starter         # 系统日志、HTML 处理
+│   ├── dbf-starter / word-starter / ofd-starter
+│   └── ibd-starter                           # MySQL IBD 文件解析
 │
-├── middleware-parent/                         # 中间件
-│   ├── kafka-starter / rabbitmq-starter      # 消息队列
-│   ├── nacos-starter / zookeeper-starter     # 注册中心/配置
-│   ├── etcd-starter / consul-starter         # 分布式 KV
-│   └── skywalking-starter                    # 链路追踪
+├── network-parent/                           # 网络协议（30+ 协议）
+│   ├── httpclient-starter / okhttp-starter   # HTTP 客户端
+│   ├── armeria-starter / rsocket-starter     # HTTP/2 响应式 RPC
+│   ├── rpc-dubbo-starter / rpc-sofa-starter  # RPC 框架
+│   ├── ssh-starter / ftp-starter / smb-starter # 远程文件传输
+│   ├── git-starter                           # Git 操作
+│   ├── vertx-starter                         # Vert.x 异步框架
+│   ├── playwright-starter                    # 浏览器自动化
+│   ├── webview-starter / webview-jcef-starter # 嵌入式 WebView
+│   ├── acme-starter / ngrok-starter          # 证书申请 / 内网穿透
+│   ├── docker-starter / quarkus-starter      # Docker / Quarkus
+│   ├── socketio-starter / sinch-starter      # Socket.IO / 短信
+│   └── tshark-starter / kcp-starter          # 抓包分析 / KCP 协议
+│
+├── cloud-parent/                             # 云服务商集成
+│   ├── alibaba-starter / tencent-starter     # 阿里云 OSS / 腾讯云 COS
+│   ├── huawei-starter / baidu-starter        # 华为 OBS / 百度 BOS
+│   ├── amazon-starter / google-starter       # AWS S3 / Google Cloud
+│   ├── openai-starter / claude-starter       # AI 大模型 API（统一 ChatClient）
+│   ├── zhipu-starter / doubao-starter        # 智谱 GLM / 豆包
+│   ├── ollama-starter / xunfei-starter       # 本地模型 / 讯飞
+│   ├── huggingface-starter / modelscope-starter # HuggingFace / ModelScope
+│   ├── dingding-starter / feishu-starter     # 钉钉 / 飞书机器人
+│   ├── hikvision-starter / uniview-starter   # 海康威视 / 宇视摄像头
+│   └── qiniu-starter / wechat-starter        # 七牛云 / 微信
 │
 ├── deeplearning-parent/                      # 深度学习
 │   ├── deeplearning-onnx-starter             # ONNX Runtime 推理
 │   ├── deeplearning-pytorch-starter          # PyTorch
 │   ├── deeplearning-tensorflow-starter       # TensorFlow
 │   ├── deeplearning-opencv-starter           # OpenCV 计算机视觉
-│   ├── deeplearning-arcface-starter          # ArcFace 人脸识别
-│   ├── deeplearning-tesseract-starter        # OCR 文字识别
-│   ├── deeplearning-speech-starter           # 语音识别
-│   ├── deeplearning-agentscope-starter       # AgentScope Agent 框架
-│   └── deeplearning-langchain4j-starter      # LangChain4j
+│   ├── deeplearning-arcsoft-starter          # ArcSoft 人脸检测
+│   ├── deeplearning-tesseract-starter        # Tesseract OCR
+│   ├── deeplearning-agentscope-starter       # AgentScope 多 Agent 协作
+│   ├── deeplearning-langchain4j-starter      # LangChain4j
+│   └── deeplearning-safetensors-starter      # Safetensors 模型加载
 │
-├── derive-parent/                            # 衍生扩展
-│   ├── cli-starter / javafx-starter          # CLI 应用、JavaFX 桌面
-│   ├── oshi-starter / hanlp-starter          # 系统信息、中文 NLP
-│   ├── pinyin-starter / jdk15on-starter      # 拼音、Bouncy Castle 加密
-│   └── tiktoken-starter / perf-rust-starter  # Token 计数、性能工具
+├── middleware-parent/                        # 中间件
+│   ├── kafka-starter / rabbitmq-starter      # 消息队列
+│   ├── nacos-starter / zookeeper-starter     # 注册中心 / 配置中心
+│   ├── redis-starter                         # Redis 客户端
+│   ├── prometheus-starter / sentinel-starter # 监控 / 限流
+│   ├── chronicle-starter                     # Chronicle Queue 高性能日志
+│   ├── docker-starter                        # Docker 管理
+│   ├── mqtt-starter / minio-starter          # MQTT / MinIO
+│   └── apollo-starter / undertow-starter     # Apollo 配置 / Undertow
 │
-├── task-parent/                              # 任务调度
-│   ├── quartz-starter                        # 企业级定时任务
-│   ├── resilience4j-starter                  # 熔断/限流/重试
-│   ├── chronicle-starter                     # 高性能持久化队列
-│   └── guava-retrying-starter                # 重试机制
+├── datatask-parent/                          # 数据任务
+│   ├── datasearch-starter                    # 数据搜索（音乐/视频/汇率/IP）
+│   ├── datarecovery-starter                  # 数据恢复
+│   ├── datasync-starter / datasync-agent-starter # 数据同步
+│   ├── quartz-starter                        # 定时任务
+│   └── retry-starter                         # 重试机制
 │
-├── test-parent/                              # 浏览器自动化
-│   ├── playwright-starter / selenium-starter # 浏览器自动化
-│   └── htmlunit-starter                      # 无头浏览器
+├── datalake-parent/                          # 数据湖
+│   ├── datalake-starter                      # 数据湖核心
+│   ├── datalake-sink-starter                 # 数据湖写入
+│   ├── datalake-cdc-starter                  # CDC 变更捕获
+│   └── datalake-query-starter                # 数据湖查询
 │
-├── network-parent/                           # 网络支持
-├── data-parent/                              # 数据处理
+├── extra-parent/                             # 扩展组件
+│   ├── fastjson-starter / gson-starter / serialize-starter # JSON 序列化
+│   ├── crypto-starter / captcha-starter      # 加密 / 验证码
+│   ├── desktop-starter / oshi-starter        # 桌面 / 系统信息
+│   ├── metrics-starter                       # 指标采集
+│   ├── tika-starter                          # 文档内容提取
+│   └── fory-starter                          # Fory 序列化
+│
+└── runtime-parent/                           # 运行时增强
+    ├── runtime-starter                       # 运行时核心
+    ├── runtime-agent                         # Agent 注入
+    ├── runtime-apm                           # APM 监控
+    └── runtime-shell                         # 命令行工具
 ```
 
 ---
 
-## 核心功能 — common-starter（必选模块）
+## 核心模块说明
 
-`utils-support-common-starter` 是本项目的核心基础库，提供日常 Java 开发中最常用的工具功能。
+### utils-support-common-starter（核心基础）
 
-### 类型转换 — Converter
+`utils-support-common-starter` 是本项目的基础工具集，提供 Java 项目日常开发常用工具。
 
-统一类型转换器，支持任意类型间的智能转换：
+#### 类型转换 — Converter
 
 ```java
-// 字符串 → 数字
 Integer num = Converter.convertIfNecessary("123", Integer.class);
 Long longVal = Converter.convertIfNecessary("999999", Long.class);
-Boolean boolVal = Converter.convertIfNecessary("true", Boolean.class);
-
-// 日期转换
 Date date = Converter.convertIfNecessary("2024-01-01", Date.class);
-
-// Map → Bean
 User user = Converter.convertIfNecessary(map, User.class);
-
-// 带默认值
-Integer value = Converter.convertIfNecessary(null, Integer.class, 0);
 ```
 
-### JSON 处理 — Json
-
-基于 Jackson 封装，支持 JSON5 注释、泛型、格式化：
+#### JSON 处理 — Json
 
 ```java
-// 对象 ↔ JSON
 String json = Json.toJson(user);
 User user = Json.fromJson(json, User.class);
-
-// 格式化输出
 String pretty = Json.toPrettyJson(user);
-
-// 泛型
 List<User> users = Json.fromJson(jsonArr, new TypeReference<List<User>>(){});
-
-// JsonObject 操作
-JsonObject obj = Json.parse(json);
-String name = obj.getString("name");
 ```
 
-### 日期时间 — DateTime
+#### 加解密 — Codec / DigestUtils
 
 ```java
-DateTime now = DateTime.now();
-String formatted = now.format("yyyy-MM-dd HH:mm:ss");
+// AES
+Codec aes = CodecBuilder.newBuilder().type(CryptoType.AES).key("1234567890123456").build();
+String encrypted = aes.encodeHex("hello");
 
-DateTime dt = DateTime.parse("2024-01-01 12:00:00");
-DateTime tomorrow = now.plusDays(1);
-now.isBefore(tomorrow);  // true
-```
-
-### HTTP 客户端 — HttpClient
-
-```java
-// GET
-HttpResponse res = HttpClient.get("https://api.example.com/users")
-    .header("Authorization", "Bearer token")
-    .queryParam("page", "1")
-    .execute();
-
-// POST JSON
-HttpClient.post("https://api.example.com/users")
-    .contentType("application/json")
-    .body(Json.toJson(user))
-    .execute();
-
-// 文件上传
-HttpClient.post("https://api.example.com/upload")
-    .file("file", new File("test.pdf"))
-    .execute();
-
-// 文件下载
-HttpClient.get("https://example.com/file.zip")
-    .downloadTo("./downloads/file.zip");
-```
-
-### 加解密 — Codec / DigestUtils
-
-```java
-// AES 加解密
-Codec aes = CodecBuilder.newBuilder()
-    .type(CryptoType.AES)
-    .key("1234567890123456")
-    .build();
-String encrypted = aes.encodeHex("明文数据");
-String decrypted = aes.decodeHex(encrypted);
-
-// MD5 / SHA
+// MD5 / SHA / SM
 String md5 = DigestUtils.md5Hex("hello");
-String sha256 = DigestUtils.sha256Hex("hello");
-
-// 国密 SM3 / SM4
 String sm3 = DigestUtils.sm3Hex("abc".getBytes());
-byte[] sm4enc = DigestUtils.sm4EncryptEcb(data, key);
-
-// RSA
-byte[] encrypted = rsa.encrypt("数据".getBytes());
-byte[] decrypted = rsa.decrypt(encrypted);
 
 // Base64
 String base64 = Base64Codec.encode("hello".getBytes());
-byte[] decoded = Base64Codec.decode(base64);
 ```
 
-### SPI 服务发现 — ServiceProvider
-
-基于 SPI 的插件化扩展机制，支持按名称获取、优先级排序、条件过滤：
+#### SPI 扩展机制 — ServiceProvider
 
 ```java
-// 定义 SPI 接口
 @Spi("default")
 public interface MyService { void execute(); }
 
-// 实现类
-@Extension("impl1")
-public class MyServiceImpl1 implements MyService { ... }
-
-// 获取实现
 ServiceProvider<MyService> provider = ServiceProvider.of(MyService.class);
-MyService service = provider.getExtension("impl1");
-
-// 获取默认（最高优先级）
-MyService defaultService = provider.getDefault();
-
-// 获取所有
-List<MyService> all = provider.list();
+MyService service = provider.getExtension("default");
 ```
 
-### 其他重要工具
+#### 工具类
 
-| 功能 | 核心类 | 说明 |
+| 工具类 | 说明 |
+|--------|------|
+| `CollectionUtils` / `MapUtils` | 空判断、合并、遍历 |
+| `FileUtils` / `IoUtils` | 文件读写、目录操作 |
+| `IdUtils` | UUID、雪花算法 ID |
+| `DateTime` | 日期时间格式化与计算 |
+| `HttpClient` | HTTP 请求（GET/POST/文件上传） |
+| `ProgressBar` | 终端进度条 |
+| `ConnectionPool` | 通用连接池 |
+| `ExpressionParser` | EL/Groovy/Aviator 表达式 |
+| `ReturnResult` | 统一 API 响应封装 |
+| `DeadLetterQueue` | 内存/JDBC/文件死信队列 |
+
+> 详细文档见 [common-starter README](utils-support-core-parent/utils-support-common-starter/README.md)
+
+---
+
+## 已添加依赖及位置
+
+以下为本次构建修复及版本适配过程中新增/调整的依赖，按模块整理：
+
+### 1. JUnit 5 测试框架（全局）
+
+| 位置 | 依赖 | 用途 |
+|------|------|------|
+| `pom.xml`（根） | `junit-jupiter-api:5.11.4` (test) | 全局测试 API |
+| `pom.xml`（根） | `junit-jupiter-engine:5.11.4` (test) | 全局测试执行引擎 |
+| `utils-support-datasource-starter/pom.xml` | `junit-jupiter-api:5.11.4` (test) | 数据源模块测试 |
+| `utils-support-datasource-starter/pom.xml` | `junit-jupiter-engine:5.11.4` (test) | 数据源模块测试执行 |
+
+### 2. Mockito 5（网络模块）
+
+| 位置 | 依赖 | 用途 |
+|------|------|------|
+| `utils-support-network-starter/pom.xml` | `mockito-core:5.14.2` (test) | 网络模块单元测试 Mock |
+
+### 3. Lombok Java 25 兼容配置
+
+| 位置 | 配置项 | 说明 |
 |------|--------|------|
-| 集合工具 | `CollectionUtils` / `MapUtils` | 判空、分区、扁平化、交集并集 |
-| 文件工具 | `FileUtils` / `IoUtils` | 读写、复制、删除、目录遍历 |
-| ID 生成 | `IdUtils` | UUID、雪花算法、短 ID |
-| 版本号 | `Version` | 语义化版本解析与比较 |
-| 进度条 | `ProgressBar` | 终端进度条，多种样式 |
-| 对象池 | `ConnectionPool` | 通用连接池化管理 |
-| 表达式引擎 | `ExpressionParser` | EL/Groovy/Aviator 表达式 |
-| 返回结果 | `ReturnResult` | 统一 API 响应封装 |
-| 任务编排 | `DisruptorProvider` | 基于 Disruptor 的无锁编排 |
-| 数据同步 | `SyncFlow` | 多种数据源间的同步框架 |
-| 事件分发 | `DispatcherFlow` | 本地/Chronicle Queue 事件分发 |
-| IoC 容器 | `ConfigureObjectContext` | 轻量级 IoC 容器 |
-| 动态 SQL | `OpenFactory` | 类 APIJSON 的动态查询 |
-| ACME 证书 | `StandardAcmeServerAdaptor` | Let's Encrypt 证书自动申请 |
-| 死信队列 | `DeadLetterQueue` | 内存/JDBC/文件死信队列 |
+| `utils-support-filesystem-starter/pom.xml` | `<fork>true</fork>` + `<compilerArgs>` 中的 `--add-exports/--add-opens` | Java 25 下 Lombok 注解处理器需要开放编译器内部模块 |
+| `utils-support-filesystem-starter/pom.xml` | `<annotationProcessorPaths>` 显式声明 Lombok | 确保 Java 25 下注解处理器正确加载 |
 
-> 详细文档：[common-starter README](utils-support-core-parent/utils-support-common-starter/README.md)
+> 注：根 `pom.xml` 的 compiler plugin 已全局配置 `--add-exports` 和 `--add-opens` 参数（`Jdk.compiler` 模块），各子模块可继承。
+
+### 4. Reactor 响应式支持（SQLite 模块）
+
+| 位置 | 依赖 | 用途 |
+|------|------|------|
+| `utils-support-sqlite-starter/pom.xml` | `reactor-core` | `SqliteReactorEngine` 响应式查询依赖 |
+| `utils-support-sqlite-starter/pom.xml` | `reactor-test:${reactor.core.version}` (test) | 响应式测试支持 |
+| `utils-support-sqlite-starter/pom.xml` | `r2dbc-spi:0.9.1.RELEASE` (test) | R2DBC 测试接口 |
+
+新增类：`com.chua.sqlite.support.engine.SqliteReactorEngine`（继承 `JdbcReactorEngine`，提供 `boundedElastic` 线程池的非阻塞查询 API）。
+
+### 5. 压缩格式支持（FileStorage 模块）
+
+| 位置 | 依赖 | 用途 |
+|------|------|------|
+| `utils-support-filestorage-starter/pom.xml` | `xz:${tukaani.xz.version}` | `.tar.xz/.tzst` 压缩包预览 |
+| `utils-support-filestorage-starter/pom.xml` | `zstd-jni:${zstd-jni.version}` | `.tar.zst` 压缩包预览 |
+| `utils-support-filestorage-starter/pom.xml` | `dec:${brotli.dec.version}` | `.br` 压缩格式支持 |
+
+版本属性定义在根 `pom.xml`：
+- `tukaani.xz.version = 1.11`
+- `zstd-jni.version = 1.5.7-6`
+- `brotli.dec.version = 0.1.2`
 
 ---
 
@@ -280,8 +292,8 @@ List<MyService> all = provider.list();
 
 ### 环境要求
 
-- JDK 21+
-- Maven 3.6+
+- JDK 25+
+- Maven 3.9+
 
 ### 引入依赖
 
@@ -293,15 +305,11 @@ List<MyService> all = provider.list();
 </dependency>
 ```
 
-### 基础示例
+### 代码示例
 
 ```java
 // 类型转换
 Integer num = Converter.convertIfNecessary("123", Integer.class);
-
-// 日期处理
-DateTime now = DateTime.now();
-String formatted = now.toString("yyyy-MM-dd HH:mm:ss");
 
 // JSON
 String json = Json.toJson(object);
@@ -310,7 +318,7 @@ MyClass obj = Json.fromJson(json, MyClass.class);
 // HTTP 请求
 HttpResponse response = HttpClient.get()
     .url("https://api.example.com/data")
-    .newInvoker()
+    .header("Authorization", "Bearer xxx")
     .execute();
 
 // SPI 扩展
@@ -320,29 +328,20 @@ MyService service = provider.getExtension("default");
 
 ---
 
-## 高级功能示例
+## 高级使用示例
 
 ### 1. 统一协议服务器 — ProtocolServer
 
-支持 HTTP/WebSocket/TCP 等多协议的服务器，一行切换底层实现（Netty / Vert.x / Armeria）。
-
 ```java
-// 创建 HTTP 协议服务器
 ProtocolServer server = ProtocolServer.create("http://0.0.0.0:8080");
-
 server.get("/api/users", (request, response) -> {
     response.setContentType("application/json");
     response.setBodyString("{\"users\": []}");
 });
-
 server.start();
 ```
 
-> 详细文档：[common-starter](utils-support-core-parent/utils-support-common-starter/README.md)
-
 ### 2. 统一 OSS 存储 — FileStorage
-
-跨云存储统一接口，阿里云/腾讯云/华为云/AWS 等 OSS 一键切换。
 
 ```java
 FileStorage storage = FileStorage.createStorage("aliyun",
@@ -352,33 +351,23 @@ FileStorage storage = FileStorage.createStorage("aliyun",
         .endpoint("oss-cn-hangzhou.aliyuncs.com")
         .bucketName("your-bucket")
         .build());
-
 PutResult result = storage.putObject("path/to/file.jpg", new File("local.jpg"));
 ```
 
-> 详细文档：[cloud-parent](utils-support-cloud-parent/README.md)
-
 ### 3. AI 大模型对话 — ChatClient
-
-统一 LLM 调用接口，支持 OpenAI、通义千问、DeepSeek、智谱 GLM 等。
 
 ```java
 // 同步对话
 ChatClient client = ChatClient.create("openai", "your-api-key");
-String response = client.chatSync("你好，请介绍一下自己");
+String response = client.chatSync("请介绍一下你自己");
 
 // 流式对话
 client.chat("写一首诗", chunk -> System.out.print(chunk.getContent()));
 ```
 
-> 详细文档：[cloud 模块](utils-support-cloud-parent/README.md)
-
 ### 4. 深度学习推理 — IdentificationEngine
 
-统一推理引擎，支持 ONNX / PyTorch / TensorFlow / PaddlePaddle，覆盖目标检测、OCR、人脸识别。
-
 ```java
-// YOLO 目标检测
 IdentificationEngine engine = IdentificationEngine.builder()
     .engine("onnx")
     .configuration(DetectionConfiguration.builder()
@@ -388,23 +377,9 @@ IdentificationEngine engine = IdentificationEngine.builder()
     .build();
 
 List<PredictResult> results = engine.predict(new File("image.jpg"));
-
-// OCR 识别
-IdentificationEngine ocr = IdentificationEngine.builder()
-    .engine("tesseract")
-    .configuration(DetectionConfiguration.builder()
-        .option("language", "chi_sim+eng")
-        .build())
-    .build();
-
-ocr.predict(new File("document.png"));
 ```
 
-> 详细文档：[deeplearning-parent](utils-support-deeplearning-parent/README.md)
-
-### 5. 分布式任务编排 — Disruptor
-
-基于 Disruptor 的高性能任务编排，无锁并发，毫秒级调度。
+### 5. 分布式队列 — Disruptor
 
 ```java
 DisruptorProvider<TaskEntity> provider = DisruptorProvider
@@ -413,244 +388,96 @@ DisruptorProvider<TaskEntity> provider = DisruptorProvider
 
 Arrange<TaskEntity> arrange = provider.newArrange();
 ArrangeGroup<TaskEntity> group = arrange.group();
-
 group.handleEventsWith(new TaskHandler("task1", 1000));
-group.after("task1").handleEventsWith(
-    new TaskHandler("task2", 500),
-    new TaskHandler("task3", 800)
-);
-group.after("task2", "task3").handleEventsWith(new TaskHandler("task4", 200));
-
+group.after("task1").handleEventsWith(new TaskHandler("task2", 500));
 provider.start();
 provider.publish(entity -> entity.setId(UUID.randomUUID().toString()));
 ```
 
-> 详细文档：[common-starter](utils-support-core-parent/utils-support-common-starter/README.md)
-
-### 6. 文件转换 — ConvertFileSystem
-
-文档格式互转，自动检测转换器。
+### 6. SQLite 响应式查询
 
 ```java
-ConvertFileSystem converter = ConvertFileSystem.autoDetect(
-    new File("document.pdf"), "docx");
-converter.convertTo(new File("document.docx"));
-```
+SqliteReactorEngine engine = new SqliteReactorEngine();
+engine.addDataSource("mydb", "data/app.db");
 
-> 详细文档：[filesystem-parent](utils-support-filesystem-parent/README.md)
+// 响应式查询（非阻塞）
+Flux<Map<String, Object>> rows = engine.query("SELECT * FROM users WHERE age > ?", 18);
+rows.subscribe(System.out::println);
 
-### 7. SPI 扩展机制
-
-```java
-// 定义 SPI 接口
-@Spi
-public interface MyService {
-    String process(String input);
-}
-
-// 实现
-@Spi("default")
-public class DefaultMyService implements MyService {
-    public String process(String input) {
-        return "processed: " + input;
-    }
-}
-
-// 获取实现
-ServiceProvider<MyService> provider = ServiceProvider.of(MyService.class);
-MyService service = provider.getExtension("default");
-```
-
-### 8. 事件分发 — DispatcherFlow
-
-多规则事件分发框架，支持本地、Chronicle Queue 持久化、服务发现。
-
-```java
-// 本地分发
-DispatcherFlow flow = DispatcherFlow.createLocal();
-flow.register(new UserEventHandler());
-flow.start();
-flow.publish(new UserCreatedEvent("user123", "张三"));
-flow.close();
-
-// Chronicle Queue 持久化分发
-DispatcherFlow chronicleFlow = DispatcherFlow.createChronicle("/tmp/queue");
-chronicleFlow.register(new OrderEventHandler());
-chronicleFlow.start();
-chronicleFlow.publish(new OrderCreatedEvent("order123", 100.0));
-chronicleFlow.close();
-```
-
-### 9. 动态 SQL 查询 — JsonAPI
-
-类 APIJSON 的动态查询语法。
-
-```java
-OpenFactory factory = OpenBuilder.newBuilder()
-    .writerWithDefaultPrettyPrinter()
-    .addDataSource(dataSource)
-    .build();
-
-String result = factory.get("""
-{
-    "User[]": {
-        "@count": 10,
-        "@page": 1,
-        "status": 1,
-        "@order": "createTime-"
-    }
-}
-""");
-```
-
-> 各模块更多示例请查看对应子模块 README。
-
-### 10. 分布式集群 — ClusterServer / Scatter
-
-基于 Scatter 对等网络的分布式集群，提供服务发现、负载均衡、故障剔除、HTTP/TCP 反向代理全链路。节点自动组网，无需中心化注册中心。
-
-```java
-// 启动集群节点（自动注册服务 + 开启 HTTP/TCP 代理入口）
-ClusterServer server = ClusterServer.builder()
-    .nodeId("node-a")
-    .host("0.0.0.0")
-    .port(8080)
-    .scatterId("order")                          // 业务分组
-    .seeds("192.168.1.11:19002")                 // 种子节点（可选）
-    .servicePaths(List.of("/api"))
-    .addServer("/api", "127.0.0.1", 8081, "http") // 注册后端服务
-    .build();
-
-server.start();
-```
-
-多台机器部署相同服务后，Scatter 自动发现、心跳剔除故障节点、按权重分发流量。
-
-**Spring Boot 零配置接入：**
-
-```yaml
-# application.yml — 只需已有配置即可
-spring:
-  application:
-    name: order-service   # 自动映射为 scatterId
-server:
-  port: 8080              # 自动作为集群端口
-```
-
-```java
-// Spring Boot 客户端通过 ClusterManager 路由
-@Autowired
-private ClusterServer clusterServer;
-
-public void call() {
-    Discovery target = clusterServer.manager()
-        .route("/api", "order-service", "http");
-    // 使用 target.getHost() + target.getPort() 发起请求
-}
-```
-
-| 特性 | 说明 |
-|------|------|
-| 服务发现 | Seed 引导 / 子网广播 / 网关模式，30s gossip 同步 |
-| 负载均衡 | weight（动态衰减）/ round / random |
-| 故障剔除 | 心跳连续失败 N 次自动摘除 |
-| 双协议代理 | HTTP 反向代理 + TCP 原生代理 |
-| 弹性扩缩 | 节点动态上下线，客户端自动感知 |
-
-> 详细文档：[集群服务器使用说明](docs/集群服务器使用说明.html)
-
-### 11. 懒加载过期列表 — LazyExpiringList
-
-支持懒加载、TTL 自动过期回收、堆内/堆外双后端、容量保护与生命周期回调的高性能列表。
-
-```java
-try (LazyExpiringList<String> list = LazyExpiringList.<String>builder()
-        .loader(() -> loadDataFromSource())     // 懒加载器
-        .ttlMillis(60_000)                      // TTL 60 秒
-        .maxCapacity(10_000)                    // 容量保护
-        .offHeap(true)                          // 堆外存储（绕过 GC）
-        .lifecycleListener(e -> log.info("事件: {}", e.getType()))
-        .build()) {
-
-    list.size();       // 首次访问触发懒加载
-    list.get(0);       // 后续访问直接读取
-    list.evict();      // 手动释放，下次访问重新加载
-}
+// 执行 DDL
+Mono<Integer> affected = engine.execute("CREATE TABLE IF NOT EXISTS t(id INTEGER PRIMARY KEY, v TEXT)");
+affected.block();
 ```
 
 ---
 
-## 安装
+## 构建说明
 
-### 从 Maven 中央仓库
-
-```xml
-<dependency>
-    <groupId>com.chua</groupId>
-    <artifactId>utils-support-common-starter</artifactId>
-    <version>${latest.version}</version>
-</dependency>
-```
-
-### 从源码构建
+### 全量构建（跳过测试 + PMD）
 
 ```bash
-git clone https://gitee.com/achtk/utils-support-parent-starter.git
-cd utils-support-parent-starter
-mvn clean install -DskipTests
+mvn clean package -DskipTests -Dpmd.skip=true -Dmaven.test.skip=true
 ```
+
+### 注意事项
+
+- **Java 25 编译**：根 pom.xml 已配置 `--add-exports` / `--add-opens` JVM 参数，Lombok 1.18.46 可在 Java 25 下正常工作
+- **PMD 跳过**：构建时加 `-Dpmd.skip=true` 可跳过 Alibaba P3C PMD 规则检查（避免 `aktStatus is NULL` 错误）
+- **测试跳过**：加 `-Dmaven.test.skip=true` 可完全跳过测试编译和执行
+- **部分模块重新构建**：
+  ```bash
+  mvn package -DskipTests -Dpmd.skip=true -Dmaven.test.skip=true -rf :utils-support-filestorage-starter
+  ```
 
 ---
 
 ## 文档索引
 
-### 父模块文档
-
 | 文档 | 说明 |
 |------|------|
-| [云服务集成](utils-support-cloud-parent/README.md) | 阿里云、腾讯云、华为云、AWS、百度云、AI 大模型等 |
-| [数据源模块](utils-support-datasource-parent/README.md) | 30+ 种数据库/数据源支持 |
-| [文件系统模块](utils-support-filesystem-parent/README.md) | 文档、图片、视频、邮件处理 |
-| [深度学习模块](utils-support-deeplearning-parent/README.md) | ONNX、PyTorch、TensorFlow 推理 |
-| [协议模块](utils-support-protocol-parent/README.md) | 50+ 网络协议支持 |
-| [核心模块](utils-support-core-parent/utils-support-common-starter/README.md) | 基础工具、SPI 框架 |
-| [文档中心](docs/index.html) | 全部模块文档入口，含架构图、快速开始、典型场景 |
-| [集群服务器详细说明](docs/集群服务器使用说明.html) | ClusterServer scatter seed/gateway 模式（独立页面） |
-| [ONNX 模型测试报告](docs/模型测试报告.html) | ONNX 深度学习模型能力与测试结果明细 |
-| [能力清单](CAPABILITY.MD) | 项目能力总览 |
-| [更新日志](CHANGELOG.md) | 版本更新记录 |
+| [核心模块文档](utils-support-core-parent/utils-support-common-starter/README.md) | 工具类、SPI、Converter、JSON |
+| [数据源模块文档](utils-support-datasource-parent/README.md) | 30+ 种数据库/数据源支持 |
+| [文件系统模块文档](utils-support-filesystem-parent/README.md) | 文档/图片/音视频/邮件 |
+| [深度学习模块文档](utils-support-deeplearning-parent/README.md) | ONNX/PyTorch/TensorFlow 推理 |
+| [云服务商集成文档](utils-support-cloud-parent/README.md) | 阿里云/腾讯云/AWS/AI 大模型 |
+| [网络协议模块文档](utils-support-network-parent/README.md) | 30+ 网络协议支持 |
+| [中间件模块文档](utils-support-middleware-parent/README.md) | Kafka/Redis/Nacos 等 |
+| [CHANGELOG](CHANGELOG.md) | 版本变更记录 |
 
 ---
 
 ## GraalVM 支持
 
-本项目面向 GraalVM（JDK 25）提供了基础支持：
+本项目针对 GraalVM / JDK 25 提供了基础支持：
 
-- **GraalVM JVM 运行**：各模块为 Java 库，可在 GraalVM for JDK 25 上直接编译运行（含 `org.graalvm.js:js` GraalJS 脚本引擎）；
-- **Native Image 元数据**：各模块随 jar 发布 `META-INF/native-image/**`（reflect / resource / proxy / jni 配置），构建原生镜像时自动合并；
-- **native profile**：`utils-support-core-parent` 提供 `-Pnative` 构建 profile（`native-maven-plugin` 1.1.1），已包含 `--enable-native-access=ALL-UNNAMED`（支持 `java.lang.foreign` FFM）。
+- **GraalVM JVM 模式**：各模块作为 Java 库使用，兼容 GraalVM for JDK 25 直接编译运行（如 `org.graalvm.js:js` GraalJS 脚本引擎）
+- **Native Image 元数据**：各模块 jar 包内 `META-INF/native-image/**` 含 reflect / resource / proxy / JNI 配置，Native 编译时自动合并
+- **native profile**：`utils-support-core-parent` 提供 `-Pnative` Maven profile，`native-maven-plugin` 1.1.1 配合 `--enable-native-access=ALL-UNNAMED` 支持 `java.lang.foreign` FFM 调用
 
-### 构建原生镜像
+### 原生镜像构建
 
 ```bash
-# 先安装依赖模块
+# 先安装所有模块到本地仓库
 mvn clean install -DskipTests
 
-# 在应用模块执行（需已安装 GraalVM for JDK 25 并配置 GRAALVM_HOME）
+# 在目标模块上执行 Native 编译（需安装 GraalVM for JDK 25，并设置 GRAALVM_HOME）
 mvn -Pnative native:compile
 ```
 
 ### 注意事项
 
-- `NativeUtils` / `NativeLoader` 通过 classpath `/native/{platform}` 目录枚举加载 Rust cdylib，原生镜像中目录枚举不可用；请改用 `NativeUtils.load(libName, null)` 精确加载，或在应用侧用 tracing agent（`-agentlib:native-image-agent`）生成补充反射元数据；
-- 加载 JNI 动态库的模块（如 `utils-support-native-video-codec`）需要动态库位于运行期 `java.library.path`。
+- `NativeUtils` / `NativeLoader` 通过 classpath `/native/{platform}` 目录枚举加载 Rust cdylib；若目录枚举不可用，调用 `NativeUtils.load(libName, null)` 显式指定
+- 涉及 JNI 的动态链接模块（如 `utils-support-native-video-codec`）需在启动参数中设置 `java.library.path`
+
+---
 
 ## 贡献
 
-1. Fork 本项目
+1. Fork 本仓库
 2. 创建特性分支 (`git checkout -b feature/AmazingFeature`)
-3. 提交更改
-4. 推送到分支并提交 Pull Request
+3. 提交改动 (`git commit -m 'Add: some feature'`)
+4. 推送到分支 (`git push origin feature/AmazingFeature`)
+5. 创建 Pull Request
 
 ## 许可证
 
